update: 评论区img样式display: inline-block !important;

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -242,6 +242,9 @@ video {
   margin-right: auto;
   max-width: 100%;
 }
+#valine-comments img {
+  display: inline-block !important;
+}
 hr {
   background-image: repeating-linear-gradient(-45deg, #ddd, #ddd 4px, transparent 4px, transparent 8px);
   border: 0;
@@ -1193,7 +1196,7 @@ pre .javascript .function {
 }
 .links-of-author a::before,
 .links-of-author span.exturl::before {
-  background: #e067ff;
+  background: #bdec61;
   border-radius: 50%;
   content: ' ';
   display: inline-block;
