--- a/themes/next/source/css/_common/scaffolding/base.styl
+++ b/themes/next/source/css/_common/scaffolding/base.styl
@@ -60,6 +60,9 @@ iframe, img, video {
   margin-right: auto;
   max-width: 100%;
 }
+#valine-comments img {
+  display: inline-block !important;
+}
 
 hr {
   background-image: repeating-linear-gradient(-45deg, $grey-lighter, $grey-lighter 4px, transparent 4px, transparent 8px);
