--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1196,7 +1196,7 @@ pre .javascript .function {
 }
 .links-of-author a::before,
 .links-of-author span.exturl::before {
-  background: #911713;
+  background: #ff62f5;
   border-radius: 50%;
   content: ' ';
   display: inline-block;
