--- a/themes/next/source/css/_common/scaffolding/base.styl
+++ b/themes/next/source/css/_common/scaffolding/base.styl
@@ -63,7 +63,9 @@ iframe, img, video {
 #valine-comments img {
   display: inline-block !important;
 }
-
+.vpower{
+  display: none;
+}
 hr {
   background-image: repeating-linear-gradient(-45deg, $grey-lighter, $grey-lighter 4px, transparent 4px, transparent 8px);
   border: 0;
