--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1199,7 +1199,7 @@ pre .javascript .function {
 }
 .links-of-author a::before,
 .links-of-author span.exturl::before {
-  background: #c275bd;
+  background: #ff9590;
   border-radius: 50%;
   content: ' ';
   display: inline-block;
