--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1199,7 +1199,7 @@ pre .javascript .function {
 }
 .links-of-author a::before,
 .links-of-author span.exturl::before {
-  background: #fe0fa3;
+  background: #b485f1;
   border-radius: 50%;
   content: ' ';
   display: inline-block;
